# jsruntime

./: .gitattributes  .gitmodules  Cargo.toml  design.md
jsruntime/: Cargo.toml
jsruntime/src/: externalfunctions.rs  imports.rs  jsrunner.rs  main.rs  provider.rs
providers/machine/: Cargo.toml
providers/machine/src/: basic_globals.rs  command_module.rs  global_provider.rs  lib.rs
runner/: Cargo.toml
runner/src/: bindings.rs  imports.rs  lib.rs  logger.rs  runner.rs  state.rs
runner/tests/: js_runner.rs
runner/tests/js/: 000_basics.js
serde_v8/: README.md
serde_v8/benches/: de.rs  ser.rs
serde_v8/examples/: basic.rs
serde_v8/src/: error.rs  keys.rs  payload.rs  serializable.rs  utils.rs
serde_v8/src/magic/: bytestring.rs  string_or_buffer.rs  zero_copy_buf.rs
serde_v8/tests/: de.rs
src/: externalfunctions.rs  jsrunner.rs  lib.rs  state.rs
src/modules/: core_modules.rs  mod.rs
util/: Cargo.toml
util/src/: colors.rs  error.rs  fmt_error.rs  lib.rs
