[package]
name = "serenity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"
name = "serenity" # the name of the library that will be generated
crate-type = ["cdylib"]

[dependencies]
v8 = "0.41.0"
anyhow = "1.0.65"
lazy_static = "1.4.0"