[package]
name = "jsruntime"
version = "0.1.0"
authors = ["BigBadE"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/BigBadE/JSRuntime"
description = "A JavaScript runtime made for a game"

[lib]
path = "src/jsrunner.rs"
name = "serenity" # the name of the library that will be generated
crate-type = ["cdylib"]

[dependencies]
runner = { version = "0.1.0", path="../runner" }
util = { version = "0.1.0", path="../util" }
shared_memory = "0.12.4"
anyhow = "1.0"
v8 = "0.41.0"