# Copyright 2018-2022 the Deno authors. All rights reserved. MIT license.
[package]
name = "runner"
version = "0.1.0"
authors = ["BigBadE"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/BigBadE/JSRuntime"
description = "A JavaScript runtime made for a game"

[lib]
path = "src/lib.rs"

[dependencies]
util = { version = "0.1.0", path="../util" }
serde_v8 = { version = "0.31.0", path = "../serde_v8" }
v8 = "0.40.2"
anyhow = "1.0"
