[package]
name = "runner"
version = "0.1.0"
authors = ["BigBadE"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/BigBadE/JSRuntime"
description = "A JavaScript runtime made for a game"

[lib]
path = "src/lib.rs"

[dependencies]
util = { version = "0.1.0", path="../util" }

serde_v8 = "0.38.0"
serde = { version = "1.0.129", features = ["derive"] }
shared_memory = "0.12.4"
v8 = "0.41.0"
anyhow = "1.0"
