[package]
name = "machine"
version = "0.1.0"
authors = ["BigBadE"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/BigBadE/JSRuntime"
description = "Machine module for JS methods"

[lib]
path = "src/lib.rs"

[dependencies]
runner = { version = "0.1.0", path="../../runner" }
util = { version = "0.1.0", path="../../util" }
v8 = "0.41.0"